			Java Electric change log

************************* Version 8.00: Released  *************************

IMP: (5/28/04, GVG) Added execution flag to Job class. Second version of qTree for polygon merging

IMP: (5/28/04, RK) Added fill cells: fill456_pwr and fill456w_pwr. Merge Jonathan's gate generator code into mine. Add user interface checks.

IMP: (5/27/04, RK) Added _pwr gates to layout generators. Added fill56_pwr and fill56w_pwr to fill cell generator.

IMP: (5/26/04, SMR) Implemented schematic frames.

IMP: (5/26/04, SMR) Implemented Spice cell model overrides in the Spice tab of the Tool Options dialog.

IMP: (5/25/04, RK) Add fill123, fill123w, and fill34.

IMP: (5/25/04, GVG) First draft for qTree to replace PolyMerge.

IMP: (5/25/04, RK) Modify "Justin" command so it scans LoCo schematics and generates layout for all
     gates it knows how to.

IMP: (5/25/04, GVG) Disable doAction button in CellBrowser when no cells are available.
     getSelectedCell returns null if index is -1. Rename functionaly enabled in CellBrowser.

IMP: (5/25/04, GVG) Coverage implants: more robust functions. Option added under Tool->Generation->Coverage Implants Generator

IMP: (5/24/04, SMR) Renamed "grab" to "anchor" everywhere.

IMP: (5/24/04, JKG) Improved Pad Generator

IMP: (5/24/04, SMR) Added node alignment commands "Edit / Move / Align..."

BUG: (5/24/04, SMR) During long library input, concurrency exception is thrown.
FIX: Synchronized maintenance of cell lists in Library.java.

IMP: (5/24/04, SMR) Added "Edit / Move / Spread..."

IMP: (5/24/04, SMR) Added "Edit / Move / Move Objects By..."

IMP: (5/23/04, SMR) Implemented "Text" panel of "Edit Options".

IMP: (5/23/04, SMR) Implemented ability to disable file-selection dialogs for netlist output.

IMP: (5/23/04, SMR) Implemented saving of primitive node sizes.

IMP: (5/21/04, SMR) Added EDialog class as super to all dialogs to remember position.
